# nomad-sentinel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THREAT_MODEL.md  nomad-sentinel-signing-key.asc  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yaml
data/: fx_rates.json
data/checklists/: templates.json
data/countries/: index.json
data/phrasebook/: index.json
help/: backup.md  country-checklists.md  emergency.md  expenses.md  index.md  journal.md  message-encryptor.md  metadata-scrubber.md  packing-checklists.md  phrasebook.md  profiles.md  setup-wizard.md
src/: App.tsx  HelpPanel.tsx  helpContent.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  checklists.rs  countries.rs  emergency.rs  expenses.rs  journal.rs  mod.rs  phrasebook.rs  profiles.rs  scrubber.rs  setup.rs
src/pages/: Backup.tsx  CountryChecklists.tsx  EmergencyToolkit.tsx  ExpenseTracker.tsx  Journal.tsx  MessageEncryptor.tsx  MetadataScrubber.tsx  PackingChecklists.tsx  Phrasebook.tsx  Settings.tsx  SetupWizard.tsx
