[package]
name = "nomad-sentinel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "nomad_sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
dirs-next = "2.0"
kamadak-exif = "0.5"
tauri-plugin-dialog = "2"
